hphp/hack/test/decl/typedefs.php.typecheck.exp
File "typedefs.php", line 6, characters 1-51:
No code may exist outside of namespace {} (Parsing[1002])
File "typedefs.php", line 10, characters 16-31:
Unbound name: `varray_or_darray` (Naming[2049])
File "typedefs.php", line 10, characters 16-31:
Too few type arguments for this type (Naming[2071])
